--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
+  <meta name="google-site-verification" content="cXTUoZCCM95X-d-W87yWuw-PGfD7wntZGyJEpKJHOi8" />
 
   {% capture title %}
     {%- if page.share-title -%}
